--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,22 @@
 <h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
-<% @posts.each do |post| %>
-  <tr>
-    <td><%= post.to_s %></td>
-  </tr>
+<br/>
+<h3> RabbitMQ Data </h3>
+<% @rabbit_list.each do |item| %>
+  <%= item.to_s %><br/>
 <% end %>
+
+<br/>
+<h3> Redis Data </h3>
+<% @redis_list.each do |item| %>
+  <%= item.to_s %><br/>
+<% end %>
+
+<br/>
+
+<h3> Kafka Data </h3>
+<% @kafka_list.each do |item| %>
+  <%= item.to_s %><br/>
+<% end %>
+
+
+<%# <%= render partial: "rabbit", locals: {posts: @posts} %>
